feat: [Atomic] Add Button component

--- a/learnify/package.json
+++ b/learnify/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.27.2",
+    "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.29.0",
